Fix login-banner alignment

--- a/static/styles.css
+++ b/static/styles.css
@@ -27,8 +27,10 @@ h1 {
 .login-banner {
     display: flex;
     justify-content: center;
+    margin: auto;
 }
-.login-banner div {
+.login-banner > div {
+    width: 50%;
     margin: auto;
 }
 
